# ieor4576-project3

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.combined  README.md  business_document.md  developmentlog.md  projectidea.md  pyproject.toml
backend/: main.py
backend/agents/: application_coach.py  clarity_coach.py  content_analyst.py  delivery_coach.py  narrative_coach.py  persona_agents.py  qa_predictor.py  revision_planner.py  synthesizer.py
backend/graph/: pipeline.py
backend/models/: schemas.py
backend/storage/: db.py
backend/utils/: audio.py  faculty_enrichment.py  json_parse.py  parsing.py  program_research.py  throttle.py  venue_loader.py
backend/venues/: faculty_outreach.yaml  generic_academic.yaml  graduate_sop.yaml  job_talk.yaml  masters_application.yaml  neurips.yaml  nsf.yaml  nsf_grfp.yaml  phd_application.yaml
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/results/[sessionId]/: page.tsx
frontend/lib/: api.ts  types.ts
scripts/: start-combined.sh
