[project]
name = "storycoach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-cloud-speech>=2.38.0",
    "json-repair>=0.59.5",
    "langgraph>=1.1.9",
    "litellm[google]>=1.83.13",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.26",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
